--- a/styles/base.css
+++ b/styles/base.css
@@ -36,13 +36,6 @@ nav ul {
 nav li {
     flex: 1 1 auto ;
 }
-main {
-    border: 1px solid grey;
-    max-width: 1000px;
-    margin: 10px auto;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
-}
 .card {
     display: block;
     margin: 10px;
@@ -61,15 +54,14 @@ main {
     border-radius: 10px;
 }
 .first p {
-    margin: 10px;
+    margin: 20px;
 }
 .second h2 {
     text-align: center;
     font-size: larger;
     border-bottom: 1px solid grey;
     padding: 10px;
-    background-color: rgb(7, 7, 151);
-    color: white;
+    color: rgb(20, 20, 20);
     border-radius: 10px;
 }
 .first img {
@@ -93,4 +85,48 @@ main {
 }
 footer {
     text-align: center;
+}
+aside {
+    text-align: center;
+    border: 1px solid grey;
+    margin: 10px auto;
+    border-radius:10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    grid-column: 3;
+    margin-left: 0px;
+}
+aside h2 {
+    background-color: rgb(7, 7, 151);
+    color: white;
+    text-align: center;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-size: larger;
+    border-radius: 10px;
+}
+main {
+    border: 1px solid grey;
+    margin: 10px auto;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    grid-column: 2;
+    max-width: 900px;
+}
+body {
+    display: grid;
+}
+header, footer {
+  grid-column: 1 / 4; /* Full-width for header and footer */
+}
+aside ul {
+    margin: 40px;
+}
+aside li {
+    list-style: circle;
+    padding: 10px;
+}
+footer {
+    background-color: rgb(7, 7, 151);
+    color: white;
+    padding: 20px;
 }
